--- a/aula-2/index.html
+++ b/aula-2/index.html
@@ -11,6 +11,7 @@
     <h1>Um cavalo morto é um animal sem vida!</h1>
     <h2>Uma frase aí!</h2>
     <h3>Eu quero conhecer Motumbo</h3>
+    <input type="text" />
     <button onclick="mostrarAlerta()">
         INCAICA
     </button>
