Change text button

--- a/aula-2/index.html
+++ b/aula-2/index.html
@@ -13,7 +13,7 @@
     <h3>Eu quero conhecer Motumbo</h3>
     <input type="text" />
     <button onclick="mostrarAlerta()">
-        INCAICA
+        Mostrar alerta
     </button>
 
     <script src="./main.js"></script>
